// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Skeleton /> should render skeleton 1`] = `
<div>
  <div
    aria-hidden="true"
    class="BaseBox-bmPWx PulseAnimationweb__PulseAnimation-sc-184soy3-0 eegMrN jvGWrK"
    data-blade-component="skeleton"
  />
</div>
`;

exports[`<Skeleton /> should support margin and other layout props 1`] = `
<div>
  <div
    class="BaseBox-bmPWx jLCxzZ"
    data-blade-component="box"
  >
    <div
      aria-hidden="true"
      class="BaseBox-bmPWx PulseAnimationweb__PulseAnimation-sc-184soy3-0 hdzzwq jvGWrK"
      data-blade-component="skeleton"
    />
    ,
    <div
      aria-hidden="true"
      class="BaseBox-bmPWx PulseAnimationweb__PulseAnimation-sc-184soy3-0 hdzzwq jvGWrK"
      data-blade-component="skeleton"
    />
    ,
  </div>
</div>
`;
